Change Blockly.mainWorkspae to window._BIDE.workspace. Fix comment bubble collapse bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 /* "height: 100vh" may be overspecified */ 
-html, body {
+/*html, body {
   height: 100vh;  
 }
 
@@ -8,13 +8,16 @@ html, body {
 }
 
 .App {
+*/
   /* display: flex; */
+/*
   height: 100vh;
 }
 
 .Layout1 {
   height: 100vh;  
 }
+*/
 
 .Resizer {
     background: #000;
